# MFT-Web

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
db/schema/: init.sql
layout/: specification.drawio
