[project]
name = "MFT-Web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "backtesting>=0.6.5",
    "flet-desktop>=0.28.3",
    "flet[all,web]==0.28.3",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]